<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/appbar_padding_top"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@mipmap/icon_user"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:minHeight="50.0dip"
        android:paddingEnd="12.0dip"
        android:paddingLeft="14.0dip"
        android:paddingRight="12.0dip"
        android:paddingStart="14.0dip">

        <ImageView
            android:layout_width="23.0dip"
            android:layout_height="23.0dip"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_user"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputUesrName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:paddingLeft="15dip"
            android:paddingRight="0dip"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_text_color"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ImageView
        style="@style/PersonalLine"
        android:contentDescription="@string/app_name"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:minHeight="50.0dip"
        android:paddingLeft="14.0dip"
        android:paddingRight="12.0dip">

        <ImageView
            android:layout_width="23.0dip"
            android:layout_height="23.0dip"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_pwd"/>

        <EditText
            android:id="@+id/inputPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_text_color"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ImageView
        style="@style/PersonalLine"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/isRememberPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:paddingLeft="10dp"
            android:text="@string/remember_pwd"
            android:textColor="@color/coolColor"/>

        <TextView
            android:id="@+id/forgetPwdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingRight="10dp"
            android:text="@string/forgot_pwd"
            android:textColor="@color/coolColor"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:gravity="center"
        android:text="@string/login_btn"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:gravity="center"
        android:text="@string/register_btn"/>
</LinearLayout>
