<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barBackground"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/barBackground"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/edit_tip_name"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/contNameView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:drawableRight="@android:drawable/ic_menu_edit"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@android:color/white"/>
        </TableRow>
        <ImageView
            style="@style/PersonalLine"
            android:contentDescription="@string/app_name"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/edit_tip_code"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/contCodeView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@android:color/white"/>
        </TableRow>

        <ImageView
            style="@style/PersonalLine"
            android:contentDescription="@string/app_name"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="位屏"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/contTypeView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@android:color/white"/>
        </TableRow>

        <ImageView
            style="@style/PersonalLine"
            android:contentDescription="@string/app_name"/>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/edit_tip_btn1"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/editBtnName1"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:drawableRight="@android:drawable/ic_menu_edit"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@android:color/white"/>
        </TableRow>
        <ImageView
            style="@style/PersonalLine"
            android:contentDescription="@string/app_name"/>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/edit_tip_btn2"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/editBtnName2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:drawableRight="@android:drawable/ic_menu_edit"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@android:color/white"/>
        </TableRow>
        <ImageView
            style="@style/PersonalLine"
            android:contentDescription="@string/app_name"/>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/edit_tip_btn3"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/editBtnName3"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:drawableRight="@android:drawable/ic_menu_edit"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@android:color/white"/>
        </TableRow>
        <ImageView
            style="@style/PersonalLine"
            android:contentDescription="@string/app_name"/>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/edit_tip_btn4"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/editBtnName4"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:drawableRight="@android:drawable/ic_menu_edit"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@android:color/white"/>
        </TableRow>

        <Button
            android:id="@+id/commitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/commit_btn"/>
    </LinearLayout>
</ScrollView>