<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/btn_margin"
    android:background="@drawable/cardlayout_shape"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center_horizontal"
            android:text="@string/input_scene_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/editSceneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        style="@style/PersonalLine"
        android:layout_marginLeft="@dimen/appbar_padding_top"
        android:layout_marginRight="@dimen/appbar_padding_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/choose_scene_icon"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/editSceneIcon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/btn_margin"
            android:layout_weight="1"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/scene_0"/>
    </LinearLayout>
</LinearLayout>
