<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yf.android.simpledome.activitys.TabedActivity">

    <LinearLayout
        android:id="@+id/setLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/barBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/fab_margin">


        <ImageView
            android:id="@+id/userIconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/text_margin"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_user"/>

        <TextView
            android:id="@+id/userNameTextVIew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uesr_icon_text"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@color/barBackground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/contMagMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/barBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/set_padding"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_manage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_item_mag"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <ImageView
            style="@style/PersonalLine"
            android:layout_marginLeft="@dimen/appbar_padding_top"
            android:layout_marginRight="@dimen/appbar_padding_top"/>

        <LinearLayout
            android:id="@+id/sceneMagMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/barBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/set_padding"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_crop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_item_mag_s"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@color/barBackground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/configLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/barBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/set_padding"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_compass"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_item_config"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <ImageView
            style="@style/PersonalLine"
            android:layout_marginLeft="@dimen/appbar_padding_top"
            android:layout_marginRight="@dimen/appbar_padding_top"/>

        <LinearLayout
            android:id="@+id/logoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/barBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/set_padding"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_set_as"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_item_logout"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
